incremented PermGen also configured forked execution of surefire plugin.